2011-04-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Only need a single implementation of testPrototype
        https://bugs.webkit.org/show_bug.cgi?id=59724

        Remove excess copy of identical testPrototype() code

        * jit/JITPropertyAccess.cpp:
        (JSC::JIT::testPrototype):
        * jit/JITPropertyAccess32_64.cpp:

2011-04-28  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Martin Robinson.

        [Gtk] Split JSC and WebCore builds
        https://bugs.webkit.org/show_bug.cgi?id=19428

        Build JavaScriptCore as a libtool shared library instead of a
        private convenience library.

        * GNUmakefile.am: define new jsc library and adapt to new name for
        javascriptcore target.
        * GNUmakefile.list.am: ditto.

2011-04-28  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/59705> WTF::postTimer() leaks a CFRunLoopTimerRef every time it's called

        Reviewed by Simon Fraser.

        * wtf/mac/MainThreadMac.mm:
        (WTF::postTimer): Use RetainPtr to plug the leak.

2011-04-27  Sam Weinig  <sam@webkit.org>

        Reviewed by David Kilzer.

        Add way to install testapi in production builds
        https://bugs.webkit.org/show_bug.cgi?id=59674

        * Configurations/TestAPI.xcconfig: Copied from Configurations/JavaScriptCore.xcconfig.
        Add configuration file for TestAPI. In addition to name, we now specify an install path
        and allow SKIP_INSTALL to be overridden by setting FORCE_TOOL_INSTALL.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        Remove in-project build settings and add missing configuration files. Added missing CompilerVersion.xcconfig
        file.

2011-04-27  Adam Barth  <abarth@webkit.org>

        Reviewed by David Levin.

        Enable strict OwnPtrs for Chromium
        https://bugs.webkit.org/show_bug.cgi?id=59666

        * wtf/OwnPtr.h:

2011-04-27  Oliver Hunt  <oliver@apple.com>
